--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <ul class="tabs__caption">
                         <li class="tabs__item active">
                             <div class="tabs__email"></div>
-                            <div class="tabs__label">E-mail</div>
+                            <div class="tabs__label">Email</div>
                         </li>
                         <li class="tabs__item">
                             <div class="tabs__phone"></div>
